sandbox/output
GildedRoseTest.java:25: error: cannot find symbol
        assertEquals(19, normalItem.quality);
                         ^
  symbol:   variable normalItem
  location: class GildedRoseTest
1 error
Error: Could not find or load main class TexttestFixture
